# clojure-hs

./: .gitignore  LICENSE  clojure.cabal
src/: Main.hs
