name:                clojure
version:             0.1.0.0
synopsis:            Clojure Programming Language
homepage:            www.github.com/aamedina/clojure-hs
license:             MIT
license-file:        LICENSE
author:              Adrian Medina
maintainer:          adrian.medina@mail.yu.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable clojure
  main-is:             Main.hs
  ghc-options:         -fllvm
  build-depends:       base >=4.7 && <4.8,
                       llvm-general >= 3.4.4.0
  hs-source-dirs:      src
  default-language:    Haskell2010